# certificate_scripts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-lint.yml
scripts/: create_root.py  dummy.py
scripts/internal/: paths.py
scripts/templates/: template_ca.cnf
